starlark-rust/starlark_syntax/src/syntax/grammar_tests/error_reserved_keyword.golden
# @generated
# To regenerate, run:
# ```
# STARLARK_RUST_REGENERATE_GOLDEN_TESTS=1 cargo test -p starlark --lib
# ```

Program:
class Foo:
  pass

Error:
error: Parse error: cannot use reserved keyword `class`
 --> error_reserved_keyword:1:1
  |
1 | class Foo:
  | ^^^^^
  |


Program:
import os

Error:
error: Parse error: cannot use reserved keyword `import`
 --> error_reserved_keyword:1:1
  |
1 | import os
  | ^^^^^^
  |


Program:
raise ValueError

Error:
error: Parse error: cannot use reserved keyword `raise`
 --> error_reserved_keyword:1:1
  |
1 | raise ValueError
  | ^^^^^
  |
